@@ -1,3 +1,7 @@
+2014-10-16 Caolán McNamara <caolanm at LibO>:
+	* rhbz#915448, sf#57, sf#185 report character offset
+	  and not byte offset in ispell mode
+
 2014-09-22 Németh László <nemeth at numbertext dot org>:
 	* fix crash in morphological analysis of the Hungarian
 	  compound word 'művészegyéniség', reported by Gáspár Sinai
